# Raspberry-NB-iot

./: CMakeLists.txt  LICENSE  README.md
hardware/: nbiot.c  nbiot.h  uart.c  uart.h
tools/: color.h  debugtool.h  hexstring.c  hexstring.h  probar.c  probar.h
usr/: main.c  main.h
